fix: layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
